新增数据源配置

--- a/paper-im-server/src/main/resources/profiles/local/db.properties
+++ b/paper-im-server/src/main/resources/profiles/local/db.properties
@@ -1,5 +1,5 @@
 mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/archcenter?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.url=jdbc:mysql://localhost:3306/paper-im?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.username=root
 mysql.password=ok
 mysql.maxActive=50
