新增异常处理

--- a/paper-im-server/build.gradle
+++ b/paper-im-server/build.gradle
@@ -16,5 +16,6 @@ dependencies {
             "javax.transaction:jta:1.1",
             "dom4j:dom4j:${dom4j_version}",
             "commons-codec:commons-codec:${commonscodec_version}"
+           // "org.springframework.boot:spring-boot-starter-security:${springBootVersion}",
     )
 }
