--- a/paper-im-server/src/main/resources/application-local.yml
+++ b/paper-im-server/src/main/resources/application-local.yml
@@ -10,3 +10,10 @@ server:
     tomcat:
         basedir: /tmp
 
+javamelody:
+    enabled: true
+    name: javamelodyFilter
+    init-parameters:
+        log: true
+
+
