--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = 'paper-im'
 include 'paper-im-server'
 include 'paper-im-common'
 include 'paper-im-core'
+include 'paper-im-swagger'
 
